--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,14 +6,20 @@ services:
       context: .
     ports:
       - "8585:8080"
+    environment:
+      - VUE_APP_API_URL=http://api-escola/api
+      - CHOKIDAR_USEPOLLING=true
     stdin_open: true
     tty: true
     restart: unless-stopped 
     working_dir: /app
     volumes:
       - ./:/app
+      - /app/node_modules
     networks:
       - escola_network
+    extra_hosts:
+      - "api-escola:172.20.0.5"
 networks:
   escola_network:
     driver: bridge
