adionando token ao header Authorization

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-VUE_APP_API_URL=http://api-escola/api
+VUE_APP_API_URL=http://172.20.0.5/api
 NODE_ENV=development
+VUE_APP_REDIS_HOST=""
+VUE_APP_REDIS_PORT=6379
+VUE_APP_REDIS_PASSWORD=""
