--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.7",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "redis": "^5.5.6",
     "vue": "^3.2.13",
     "vue-router": "^4.5.1"
   },
